--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <div class="col-sm-4 marBot">
                   <img class="d-block w-100" src="img/autoefectivo.png" alt="First slide">
                   <h2 class="itemTitle">AUTOEFECTIVO</h2>
-                  <p class="itemPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac tellus ex. Integer eu fringilla nisi. Donec id dapibus mauris, eget dignissim turpis ...</p>
+                  <p class="itemPar">que tranza</p>
                   <button class="btn btn-outline-primary">Ver más</button>
                 </div>
                 <div class="col-sm-4 marBot">
