--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         <div class="row">
           <div class="col-sm-12">
             <h2 class="text-center perfilTitle azul">FREELANCE</h2>
-            <p class="frasePerfil text-center">Te presento los diferentes ejercicios que hago de cursos online para practicar y aprender en mi tiempo libre, puedes checarlos en mi Github y Bitbucket</p>
+            <p class="frasePerfil text-center">Te presento los diferentes ejercicios que hago de cursos online para practicar y aprender en mi tiempo libre, puedes checarlos en mi Github</p>
           </div>
         </div>
         <div class="row">
@@ -417,46 +417,87 @@
               <div class="row">
                 <div class="col-sm-4 marBot">
                   <img class="d-block w-100" src="img/validacion.png" alt="First slide">
-                  <h2 class="itemTitle">Validacion campos vacios</h2>
-                  <p class="itemPar">Validacion de campos vacios con Json utilizando RedBeans PHP</p>
+                  <h2 class="itemTitle">Form validacion campos vacios</h2>
+                  <p class="itemPar">Formulario de validacion de campos vacios con Json utilizando RedBeansPHP</p>
                   <a href="myprojects/form validation campos vacios con json/index.php"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
                 <div class="col-sm-4 marBot">
-                  <img class="d-block w-100" src="img/graduacion.png" alt="First slide">
-                  <h2 class="itemTitle">Me la pelan</h2>
-                  <p class="itemPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac tellus ex. Integer eu fringilla nisi. Donec id dapibus mauris, eget dignissim turpis ...</p>
-                  <button class="btn btn-outline-primary">Ver más</button>
+                  <img class="d-block w-100" src="img/validacionJquery.png" alt="First slide">
+                  <h2 class="itemTitle">Form validacion Jquery</h2>
+                  <p class="itemPar">Formulario de validacion con JQuery utilizando RedBeansPhp</p>
+                  <a href="myprojects/form validation con jquery/index.php"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
                 <div class="col-sm-4 marBot">
-                  <img class="d-block w-100" src="img/graduacion.png" alt="First slide">
-                  <h2 class="itemTitle">Me la pelan</h2>
-                  <p class="itemPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac tellus ex. Integer eu fringilla nisi. Donec id dapibus mauris, eget dignissim turpis ...</p>
-                  <button class="btn btn-outline-primary">Ver más</button>
+                  <img class="d-block w-100" src="img/onchange.png" alt="First slide">
+                  <h2 class="itemTitle">Formulario Onchange</h2>
+                  <p class="itemPar">Formulario que simula un pokedex para probar la funcion Onchange</p>
+                  <a href="myprojects/form validation pokedex usando onchange/index.php"><button class="btn btn-outline-primary">Ver más</button></a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 marBot">
+                  <img class="d-block w-100" src="img/formCrud.png" alt="First slide">
+                  <h2 class="itemTitle">Formulario CRUD</h2>
+                  <p class="itemPar">Formulario CRUD para aprender a hacer bases de datos con sqli</p>
+                  <a href="myprojects/formulario CRUD/formulario.php"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
                 <div class="col-sm-4 marBot">
-                  <img class="d-block w-100" src="img/graduacion.png" alt="First slide">
-                  <h2 class="itemTitle">Me la pelan</h2>
-                  <p class="itemPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac tellus ex. Integer eu fringilla nisi. Donec id dapibus mauris, eget dignissim turpis ...</p>
-                  <button class="btn btn-outline-primary">Ver más</button>
+                  <img class="d-block w-100" src="img/webapp.png" alt="First slide">
+                  <h2 class="itemTitle">Web app RedBeansPHP</h2>
+                  <p class="itemPar">Web app que hice para aprender a usar RedBeansPHP</p>
+                  <a href="myprojects/Web app con red bean/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
                 <div class="col-sm-4 marBot">
-                  <img class="d-block w-100" src="img/graduacion.png" alt="First slide">
-                  <h2 class="itemTitle">Me la pelan</h2>
-                  <p class="itemPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac tellus ex. Integer eu fringilla nisi. Donec id dapibus mauris, eget dignissim turpis ...</p>
-                  <button class="btn btn-outline-primary">Ver más</button>
-                </div>
-                <div class="col-sm-4 marBot">
-                  <img class="d-block w-100" src="img/watt4.png" alt="First slide">
-                  <h2 class="itemTitle">Me la pelan</h2>
-                  <p class="itemPar">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac tellus ex. Integer eu fringilla nisi. Donec id dapibus mauris, eget dignissim turpis ...</p>
-                  <button class="btn btn-outline-primary">Ver más</button>
+                  <img class="d-block w-100" src="img/formExamen.png" alt="First slide">
+                  <h2 class="itemTitle">Formulario sql</h2>
+                  <p class="itemPar">Formulario que se hizo para aprender sql con el objetivo de obtener datos de clientes</p>
+                  <a href="myprojects/form Sql/index.php"><button class="btn btn-outline-primary">Ver más</button></a>
                 </div>
               </div>
             </div>
-            <!-- <div class="carousel-item">
-              <img class="d-block w-100" src="img/02.jpg" alt="Second slide">
-            </div>
             <div class="carousel-item">
+              <div class="row">
+                <div class="col-sm-4 marBot">
+                  <img class="d-block w-100" src="img/simulador.png" alt="First slide">
+                  <h2 class="itemTitle">Simulador de simulacros JS</h2>
+                  <p class="itemPar">Simulador de simulacros con Js, con un switch te va presentando varias situaciones y avanza segun las decisiones que tomes con alertas</p>
+                  <a href="myprojects/Simulador pokemon/simulacro.html"><button class="btn btn-outline-primary">Ver más</button></a>
+                </div>
+                <div class="col-sm-4 marBot">
+                  <img class="d-block w-100" src="img/constructor.png" alt="First slide">
+                  <h2 class="itemTitle">Object constructor pokemon</h2>
+                  <p class="itemPar">Ejercicio para hacer object constructor, cree mi propio objeto que me ayuda a crear nuevos pokemon de manera rapida con un constructor</p>
+                  <a href="myprojects/object constructor pokemon/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
+                </div>
+                <div class="col-sm-4 marBot">
+                  <img class="d-block w-100" src="img/apocalipsis.png" alt="First slide">
+                  <h2 class="itemTitle">Apocalipsis zombie JS</h2>
+                  <p class="itemPar">Ejercicio para aprender JS y probar algunas funciones de la consola como console.warn, Math.random, etc.</p>
+                  <a href="myprojects/apocalipsis zombie/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 marBot">
+                  <img class="d-block w-100" src="img/casino.png" alt="First slide">
+                  <h2 class="itemTitle">Casinopolis JS</h2>
+                  <p class="itemPar">Ejercicio que hice para practicar algunas cosas de JS como change, Math.random y onload entre otros</p>
+                  <a href="myprojects/casinopolis/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
+                </div>
+                <div class="col-sm-4 marBot">
+                  <img class="d-block w-100" src="img/memorama.png" alt="First slide">
+                  <h2 class="itemTitle">Memorama JS</h2>
+                  <p class="itemPar">Memorama construido con JS, utilizando funciones e if, funciona de la misma manera que el juego de mesa real</p>
+                  <a href="myprojects/Memorama-Js-Meetup-MartesJs/index.html"><button class="btn btn-outline-primary">Ver más</button></a>
+                </div><!-- 
+                <div class="col-sm-4 marBot">
+                  <img class="d-block w-100" src="img/formExamen.png" alt="First slide">
+                  <h2 class="itemTitle">Formulario sql</h2>
+                  <p class="itemPar">Formulario que se hizo para aprender sql con el objetivo de obtener datos de clientes</p>
+                  <a href="myprojects/form Sql/index.php"><button class="btn btn-outline-primary">Ver más</button></a>
+                </div> -->
+              </div>
+            </div>
+            <!-- <div class="carousel-item">
               <img class="d-block w-100" src="img/graduacion.png" alt="Third slide">
             </div> -->
           </div>
