Contacto funcionando con recaptcha
El contacto ya esta funcionando, se le agrego recaptcha de google, me
envia un correo personalizado con los datos del formulario, ahora se
esta intentando hacer que envie un correo de agradecimiento al usuario

--- a/index.html
+++ b/index.html
@@ -609,6 +609,7 @@
                     <label>Descripción de la vacante:</label>
                     <textarea cols="46" rows="3" name="descripcion" required></textarea>
                   </li>
+                  <a style="background-image: "></a>
                   <div class="g-recaptcha" data-sitekey="6LdkqVsUAAAAAFVWGs00XF1xBjnsE_JlarQUSy6G"></div>
                   <li>
                     <input class="contratame btnCV btnForm" type="submit" value="Submit" placeholder="Descripción de la vacante" />
