--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="menu">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -135,6 +135,7 @@
     <!-- Modal boton CV -->
 
     <!-- experiencia y formacion -->
+    <div id="exper"></div>
     <section id="experiencia">
       <div class="container">
         <h1 class="project-name perfilTitle blanco">EXPERIENCIA Y FORMACIÓN</h1>
@@ -193,7 +194,8 @@
     <!-- experiencia y formacion -->
 
     <!-- skills -->
-    <section class="tecnologias blanco superp">
+    <div id="superp"></div>
+    <section class="tecnologias blanco">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -261,7 +263,8 @@
     <!-- skills ends -->
 
     <!-- carrusel portafolios -->
-    <section class="code" id="portafolios">
+    <div id="portafolios"></div>
+    <section class="code">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -564,7 +567,8 @@
     <!-- carrusel freelance -->
 
     <!-- hobbies -->
-    <section class="hobbies" id="hobb">
+    <div id="hobb"></div>
+    <section class="hobbies">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -579,7 +583,8 @@
     <!-- hobbies -->
 
     <!-- contacto -->
-    <section class="contacto blanco" id="contact">
+    <div id="contact"></div>
+    <section class="contacto blanco">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
